2024-01-08T00:32:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7441740658 # 3
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 300 638 / 304 644
* notice: next accum: outdated-unq outdated-all / unq all: 301 639 / 304 644
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-25] / []

2024-01-07T16:07:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7439301160 # 2
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 300 638 / 303 643
* notice: next accum: outdated-unq outdated-all / unq all: 300 638 / 304 644
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-07]

2024-01-07T08:08:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7436979810 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 287 610 / 300 638
* notice: next accum: outdated-unq outdated-all / unq all: 300 638 / 303 643
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2023-10-31 2023-11-01 2023-11-02 2023-11-03 2023-11-04 2023-11-05 2023-11-06 2023-11-07 2023-11-08 2023-11-09 2023-11-10 2023-11-11] / [2023-12-25 2023-12-27]
