@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T00:32:57Z",
+  "timestamp" : "2024-01-08T08:09:26Z",
   "count_outdated" : 639,
   "uniques_outdated" : 301,
-  "count" : 644,
-  "uniques" : 304,
+  "count" : 645,
+  "uniques" : 305,
   "clones" : [
     {
       "timestamp": "2023-12-27T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-01-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
