@@ -1,3 +1,12 @@
+2024-01-08T08:09:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7444723886 # 4
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 301 639 / 304 644
+* notice: next accum: outdated-unq outdated-all / unq all: 301 639 / 305 645
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-08]
+
 2024-01-08T00:32:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7441740658 # 3
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
